cambiado a linkedlist